--- a/FL11_HW2/homework/css/style.css
+++ b/FL11_HW2/homework/css/style.css
@@ -1,9 +1,3 @@
-/*
-
-write your code here
-
-*/
-
 @media print {
     .tm-sidebar,
     .tm-team-img,
@@ -60,6 +54,18 @@ write your code here
     }
 }
 
+@keyframes titleRotateY {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
 @media screen {
     .tm-box-bg-title:hover {
         background-color: lightskyblue;
@@ -73,6 +79,17 @@ write your code here
         padding: 0px;
         margin: 30px;
     }
+    .tm-team-description-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .tm-section-description {
+        text-indent: 1.5rem;
+    }
+    .flex-2-col {
+        display: flex;
+        align-items: center;
+    }
     section,
     .tm-content-header,
     .tm-main-nav {
@@ -82,6 +99,10 @@ write your code here
         text-shadow: 0px 2px 0px #76cdd7, 0px 12px 2px #76cdd7;
         letter-spacing: 5px;
         word-spacing: 10px;
+        animation-name: titleRotateY;
+        animation-duration: 5s;
+        animation-delay: 1s;
+        animation-iteration-count: infinite;
     }
     section::before {
         content: '';
@@ -156,6 +177,25 @@ write your code here
         border: 2px solid #90d2fa;
     }
     .tm-nav-item-link:hover {
+        background-color: #f5f5f5;
+    }
+    .tm-main-content h2+p {
+        font-style: italic;
+        line-height: 2;
+        text-indent: 2rem;
+    }
+    .gallery-container .box-work {
+        padding: 10px;
+    }
+    .gallery-container .box-work p {
+        text-indent: 0rem;
+        line-height: 1.5;
+    }
+    .gallery-container .box-work p::first-letter {
+        font-size: 2rem;
+        color: black;
+    }
+    .gallery-container .box-work:nth-child(even) {
         background-color: #f5f5f5;
     }
 }
