--- a/FL_11_18/homework/styles/posts.css
+++ b/FL_11_18/homework/styles/posts.css
@@ -2,7 +2,6 @@
   width: 30%;
   margin: auto;
 }
-
 .post{
   border: 5px solid cornflowerblue;
   border-radius: 5px;
@@ -10,6 +9,43 @@
   padding: 5px;
 }
 .post__text{
-  margin-left:20px;
+  margin-left: 20px;
   margin-bottom: 30px;
+  padding: 10px;
+  border: 3px solid #6b95e4;
+  border-radius: 5px;
+}
+.post__comment{
+  margin-left: 30px;
+}
+
+.loader_hidden{
+  display: none;
+}
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
